# MECANUM_DRIVE

./: README.md  mecanum_ctrl.py
mecanum/: CMakeLists.txt  package.xml
mecanum/config/: joint_velocity_controller.yaml
mecanum/launch/: amcl.launch  control.launch  display.launch  gazebo.launch  main.launch  mapping.launch  mecanum_ctrl.launch  move_base.launch  navigation_mecanum.launch  send_cmd_vel.launch  world_editor.launch
mecanum/launch/include/: description.launch.xml
mecanum/maps/: arena.pgm  arena.yaml
mecanum/meshes/: base.STL  leftwheel.STL  rightwheel.STL
mecanum/meshes/left/: s1.STL  s2.STL  s3.STL  s4.STL  s5.STL  s6.STL  s7.STL  s8.STL  s9.STL
mecanum/meshes/right/: s10.STL  s2.STL  s3.STL  s4.STL  s5.STL  s6.STL  s7.STL  s8.STL  s9.STL
mecanum/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
mecanum/rviz/: mapping.rviz  mecanum.rviz  navigation.rviz
mecanum/scripts/: mecanum_ctrl.py  mecanum_teleop.py  send_cmd_vel.py
mecanum/urdf/: base.urdf.xacro  base.xacro  encoder_rim.xacro  encoder_roller.xacro  left_rim.urdf.xacro  left_rim.xacro  mecanum.urdf  right_rim.urdf.xacro  right_rim.xacro
mecanum/worlds/: Maze.world  arena.world
